# omnidrive

./: .env.omnidrive.template  .gitignore  ARCHITECTURE_VALIDATION.md  CHECKPOINT_20260125.md  CLAUDE.md  DEEPSEEK_MIGRATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PREPARATION.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEPLOY_NOW_AUTOMATED.sh  DEPLOY_RAILWAY_TODO.md  HYBRID_COMPLETA.md  HYBRID_IMPLEMENTATION_PLAN.md  OMNIDRIVE_GUIDE.md  RAILWAY_QUICK_START.md  RAILWAY_SETUP.md  README.md  SAAS_BLUEPRINT_PRODUCT_SUMMARY.md  VALIDATION_REPORT.md  api_docs_response.html  auth_final.py  auth_folderfort.py  configure_and_verify.py  configure_folderfort.py  configure_google.py  copy_analysis.py  debug_auth.py  debug_response.py  design-notes.md  get_token.py  login_with_playwright.py  manual_config.py  omnidrive.py  pyproject.toml  requirements.md  requirements.txt  response_debug.txt  (+11 more)
.github/workflows/: ci.yml
docs/claude-log/: 2026-05-16_c15d8d44.full.md  2026-05-16_c15d8d44.md
omnidrive/: CLAUDE.md  cli.py  config.py  contracts.py  logging_config.py
omnidrive-desktop/: .gitignore  CLAUDE.md  index.html  omnidrive  package-lock.json  package.json  tsconfig.json
omnidrive-desktop/electron/: CLAUDE.md  main.ts  preload.ts
omnidrive-desktop/electron/bridge/: CLAUDE.md
omnidrive-desktop/src/: App.tsx  index.css
omnidrive-desktop/src/components/: CLAUDE.md  FileBrowser.tsx  FileIcon.tsx  FilePreview.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx  SyncPanel.tsx
omnidrive-desktop/src/types/: index.ts
omnidrive-web/: DEPLOYMENT.md
omnidrive-web/api/: .env.example  CLAUDE.md  Dockerfile  Railway.json  requirements.txt
omnidrive-web/api/app/: CLAUDE.md  __init__.py  main.py  omnidrive
omnidrive-web/api/app/api/routes/: auth.py  files.py  search.py  sync.py  workflows.py
omnidrive-web/api/app/api/websocket/: handler.py
omnidrive-web/api/app/auth/: __init__.py  jwt.py  middleware.py
omnidrive-web/api/app/models/: requests.py  responses.py
omnidrive-web/api/app/omnidrive/: CLAUDE.md  __init__.py  __main__.py  cli.py  config.py
omnidrive-web/api/app/omnidrive/auth/: folderfort.py  google.py
omnidrive-web/api/app/omnidrive/rag/: CLAUDE.md  indexer.py
omnidrive-web/omnidrive-web/: BACKEND_INTEGRATION.md  BACKEND_INTEGRATION_CHECKLIST.md  CLAUDE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_SUMMARY.txt  FILES_CREATED.txt  INTEGRATION_README.md  QUICK_START_INTEGRATION.md  connect-backend.sh  package-lock.json  package.json  test-backend-connection.sh  vercel.json
omnidrive-web/omnidrive-web/app/: CLAUDE.md  layout.tsx  page.tsx
omnidrive-web/omnidrive-web/app/api/v1/files/: route.ts
omnidrive-web/omnidrive-web/app/dashboard/: page.tsx
omnidrive-web/omnidrive-web/app/dashboard/files/: page.tsx
omnidrive-web/omnidrive-web/app/dashboard/search/: page.tsx
omnidrive-web/omnidrive-web/app/dashboard/sync/: page.tsx
omnidrive-web/omnidrive-web/app/dashboard/upload/: page.tsx
omnidrive-web/omnidrive-web/lib/: CLAUDE.md  api.ts  http.ts  supabase.ts  websocket.ts
omnidrive/auth/: CLAUDE.md  folderfort.py  google.py
omnidrive/commands/: __init__.py  sync.py
omnidrive/governance/: __init__.py  decorators.py  frontier_bridge.py  policies.json
omnidrive/memory/: serena_client.py
omnidrive/rag/: CLAUDE.md  embeddings.py  indexer.py  vector_store.py
omnidrive/services/: CLAUDE.md  __init__.py  base.py  factory.py  folderfort.py  google_drive.py
omnidrive/workflows/: CLAUDE.md  graphs.py
omnidrive_v2/core/: CLAUDE.md  rules.md  state.json
omnidrive_v2/skills/: builder.md  planner.md
scripts/: deploy-omnidrive.sh  verify-maximized.sh
tests/: CLAUDE.md  __init__.py  conftest.py  e2e_validation.py  test_auth_modules.py  test_cli_advanced.py  test_cli_integration.py  test_commands.py  test_config.py  test_folderfort.py  test_new_commands.py  test_rag.py  test_services_base.py  test_sync_job.py  test_workflows.py
tests/api/: test_jwt_auth.py
tests/e2e/: test_smoke.py
(+1 files in other folders)
