[tool.poetry]
name = "omnidrive-cli"
version = "1.0.0"
description = "A 360° Cloud Sync Solution - Unified CLI for multiple cloud storage services"
authors = ["OmniDrive Team"]
readme = "README.md"
packages = [{include = "omnidrive"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
python-dotenv = "^1.0"
google-api-python-client = "^2.100"
google-auth-oauthlib = "^1.1"
tqdm = "^4.66"
pydantic = "^2.0"
requests = "^2.31"

[tool.poetry.scripts]
omnidrive = "omnidrive.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B"]
